# Ai_Product_Hackathon

./: CMakeLists.txt  Deploy.rar  main.cpp
Deploy/: imgui.ini
MetadataGenerator/: MetadataGenerator.sln
MetadataGenerator/CPPclasses/: DoubleVanishingPoint.cs  FlatSurface.cs  Measures.cs  Region.cs  SingleVanishingPoint_simplified.cs
MetadataGenerator/MetadataGenerator/: Form1.Designer.cs  Form1.cs  MainWindow.Designer.cs  MainWindow.cs  MetadataGenerator.csproj  Program.cs  RegionList.cs  TableItem.cs
MetadataGenerator/MetadataGenerator/Properties/: Resources.Designer.cs
ScaleCalculator/: ScaleCalculator.sln
ScaleCalculator/ScaleCalculator/: Deserializer.h  DoubleVanishingPoint.cpp  DoubleVanishingPoint.h  FlatSurface.cpp  FlatSurface.h  Measures.cpp  Measures.h  Region.cpp  Region.h  ScaleCalculator.cpp  ScaleCalculator.vcxproj  ScaleCalculator.vcxproj.filters  SingleVanishingPoint_simplified.cpp  SingleVanishingPoint_simplified.h
modules/: Item.cpp  Item.h  controlPanel.cpp  controlPanel.h  imageProcessor.cpp  imageWindow.cpp  imageWindow.h
